tests/baselines/reference/invalidNumberAssignments.errors.txt
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(3,5): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(4,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(5,5): error TS2322: Type 'number' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(9,5): error TS2322: Type 'number' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(12,5): error TS2322: Type 'number' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(14,5): error TS2322: Type '1' is not assignable to type '{ baz: string; }'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(15,5): error TS2322: Type '1' is not assignable to type '{ 0: number; }'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(18,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(21,5): error TS2322: Type 'number' is not assignable to type 'T'.
  'number' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(23,1): error TS2539: Cannot assign to 'i' because it is not a variable.


==== tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts (10 errors) ====
    var x = 1;
    
    var a: boolean = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    var b: string = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    var c: void = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{|C|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:8:7
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{|I|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:11:11
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type '1' is not assignable to type '{ {|baz|0|}: string; }'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:14:10
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type '1' is not assignable to type '{ {|0|0|}: number; }'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:15:11
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{|T|0|}'.
!!! error TS2322:   'number' is assignable to the constraint of type '{|T|1|}', but '{|T|2|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:20:12
!!! annotated symbol 1 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:20:12
!!! annotated symbol 2 tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts:20:12
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.